tests/syntax/bad/testfile-lexing-4.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

void m() { i/**/nt i = 10; }
